--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "homepage": "http://thomasjrye.com/",
   "dependencies": {
     "-": "^0.0.1",
+    "@babel/runtime": "^7.18.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
