--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "newapp",
+  "name": "thomasjrye",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://www.thomasjrye.com/",
@@ -13,13 +13,13 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^6.24.0",
     "react-scripts": "4.0.3",
     "save-dev": "^0.0.1-security",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
