--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@testing-library/user-event": "^12.1.10",
     "body-scroll-lock": "^4.0.0-beta.0",
     "gh-pages": "^3.2.3",
+    "nvm": "^0.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.24.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "save-dev": "^0.0.1-security",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "webpack": "^5.93.0"
   },
   "scripts": {
     "start": "react-scripts start",
