--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "body-scroll-lock": "^4.0.0-beta.0",
-    "gh-pages": "^3.2.3",
     "nvm": "^0.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -47,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.3.0"
   }
 }
